--- a/backend/views/login.ejs
+++ b/backend/views/login.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Administrador</title>
     <link rel="stylesheet" href="/frontend/styles/global.css">
-    <link rel="stylesheet" href="/frontend/styles/administrador/login.css">
+    <link rel="stylesheet" href="/styles/login.css">
 </head>
 <body>
     <div class="alumnos-container">
