--- a/backend/views/modificar-producto.ejs
+++ b/backend/views/modificar-producto.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modificar Producto</title>
-    <link rel="stylesheet" href="/styles/global.css">
+    <link rel="stylesheet" href="/frontend/styles/global.css">
     <link rel="stylesheet" href="/styles/altaymod-producto.css">
 </head>
 <body>
@@ -15,11 +15,11 @@
     </div>
 
     <header>
-        <img src="/assets/imgs/gameLogo.jpg" alt="shop logo">
-        <h1>G4ME $T0RE</h1>
+        <img src="/frontend/assets/imgs/gameLogo.jpg" alt="Logo">
+        <h1>G4ME $T0RE - Modificacion producto</h1>
     </header>
 
-    <!-- IMPORTANTE: action y method -->
+
     <form action="/juegos/modificar-producto/<%= juego.id %>" method="POST">
         <h1>Modificar datos de producto</h1>
 
@@ -40,7 +40,7 @@
 
     <input type="hidden" name="disponible" value="<%= juego.disponible %>">
 
-        <button type="submit">Modificar</button>
+        <button class="aceptar-button" type="submit">Modificar</button>
         <button id="volver-button" type="button">Volver</button>
     </form>
 </body>
