--- a/backend/views/dashboard.ejs
+++ b/backend/views/dashboard.ejs
@@ -77,6 +77,10 @@
         <div class="contenedor-altaproducto">
             <button class="button alta-producto" id="volverlogin-button">Volver al login</button>
         </div>
+
+        <div class="contenedor-altaproducto">
+            <button class="button alta-producto" id="listadoventas-button">Listado de ventas</button>
+        </div>
     </main>
 </body>
 
