--- a/backend/public/styles/dashboard.css
+++ b/backend/public/styles/dashboard.css
@@ -169,3 +169,15 @@
     color: white;
     cursor: pointer;
 }
+
+
+.mensaje-exito {
+  border: 2px solid green;
+  padding: 10px;
+  margin: 10px auto;
+  max-width: 400px;
+  border-radius: 5px;
+  text-align: center;
+  color: green;
+  font-weight: bold;
+}
