--- a/backend/views/dashboard.ejs
+++ b/backend/views/dashboard.ejs
@@ -25,8 +25,14 @@
 
         <div class="contenedor-altaproducto">
             <button class="button alta-producto" id="altaproducto-button" type="button">AGREGAR PRODUCTO</button>
+            <button class="button alta-producto" id="altaadmin-button" type="button">AGREGAR NUEVO ADMIN</button>
         </div>
 
+        <% if (success) { %>
+            <div class="mensaje-exito">
+                <p style="margin: 0;"><%= success %></p>
+            </div>
+        <% } %>
 
 
         <!--Cuando el URL es juegos/dashboard (como se ve ene la ruta) automaticamente ejecuta mostrarPorPagina.js. Los datos de la variable "juegos" se pasan en mostrarPorPagina de juegosControllers.js -->
