Se modulariza css de form alta admin

--- a/backend/views/alta-admin.ejs
+++ b/backend/views/alta-admin.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Alta Usuario Administrador</title>
-  <link rel="stylesheet" href="/styles/altaymod-producto.css">
+  <link rel="stylesheet" href="/styles/alta-admin.css">
 </head>
 <body>
   <form id="formAlta" action="/usuarios/alta-admin" method="POST">
