--- a/backend/public/styles/modificar-producto.css
+++ b/backend/public/styles/modificar-producto.css
@@ -1,4 +1,4 @@
-form {
+main {
     max-width: 500px;
     margin: 40px auto;
     padding: 20px 30px;
@@ -8,22 +8,22 @@ form {
     font-family: sans-serif;
 }
 
-form h1 {
+main h1 {
     text-align: center;
     margin-bottom: 20px;
     font-size: 22px;
     color: #333;
 }
 
-form label {
+main label {
     display: block;
     margin-top: 15px;
     font-weight: bold;
     color: #444;
 }
 
-form input,
-form select {
+main input,
+main select {
     width: 100%;
     padding: 8px 10px;
     margin-top: 5px;
@@ -33,13 +33,13 @@ form select {
     box-sizing: border-box;
 }
 
-form input:focus,
-form select:focus {
+main input:focus,
+main select:focus {
     border-color: #007bff;
     outline: none;
 }
 
-form button {
+main button {
     padding: 10px;
     width: 48%;
     margin-top: 20px;
@@ -65,4 +65,8 @@ form button {
 
 #volver-button:hover {
     background-color: #5a6268;
+}
+
+.hidden{
+    display: none;
 }
