--- a/backend/views/alta-admin.ejs
+++ b/backend/views/alta-admin.ejs
@@ -14,28 +14,21 @@
     <label for="password">Contraseña:</label>
     <input type="password" id="password" name="password">
 
+    <label for="confirmPassword">Confirmar Contraseña:</label>
+    <input type="password" id="confirmPassword" name="confirmPassword">
+
+    <p id="errorFront" style="color: red; display: none; text-align: center;"></p>
+
+      <% if (error) { %> 
+      <p id="errorBack" style="color: red; text-align: center;"><%= error %></p>
+    <% } %>
+
     <div class="botones-container">
         <button type="submit" class="aceptar-button">DAR ALTA</button>
         <button type="button" class="cancelar-button" id="btnCancelar">CANCELAR</button>
     </div>
   </form>
-
-  <% if (error) { %>
-      <p style="color: red; text-align: center;"><%= error %></p>
-  <% } %>
   
-
-  <script>
-    const form = document.getElementById('formAlta');
-    form.addEventListener('submit', e => {
-      const email = form.email.value.trim();
-      const password = form.password.value.trim();
-
-      });
-
-      document.getElementById('btnCancelar').addEventListener('click', () => {
-        window.location.href = '/juegos/dashboard';
-      });
-  </script>
+  <script src="/scripts/alta-admin.js"></script>
 </body>
 </html>
