--- a/backend/public/styles/dashboard.css
+++ b/backend/public/styles/dashboard.css
@@ -181,3 +181,16 @@
   color: green;
   font-weight: bold;
 }
+
+.usuario-login{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: #40c582;
+    color: rgb(255,255,255);
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-weight: bold;
+    font-family:  Arial, sans-serif;
+    font-size: 18px;
+}
