--- a/backend/views/alta-admin.ejs
+++ b/backend/views/alta-admin.ejs
@@ -2,9 +2,20 @@
 <html>
 <head>
   <title>Alta Usuario Administrador</title>
+  <link rel="stylesheet" href="/frontend/styles/global.css">
   <link rel="stylesheet" href="/styles/alta-admin.css">
 </head>
 <body>
+      <div class="alumnos-container">
+        <p>Freijomil Bruno</p>
+        <p>Gonzalez Paula</p>
+        <p>Sanchez Franco Nicolas</p>
+    </div>
+    <header>
+        <img src="/frontend/assets/imgs/gameLogo.jpg" alt="Logo">
+        <h1>G4ME $T0RE - Alta Administrador</h1>
+    </header>
+
   <form id="formAlta" action="/usuarios/alta-admin" method="POST">
     <h1>Alta Usuario Administrador</h1>
 
